// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox/> Render checkbox 1`] = `
<div
  class="col-sm-12 offset-lg-1 col-lg-10"
  style="margin-bottom: 1rem;"
>
  <div
    class="form-group form-check"
    style="margin-bottom: 0px;"
  >
    <input
      checked=""
      class="form-check-input"
      id="1"
      type="checkbox"
    />
    <label
      class="form-label"
      for="1"
      style="margin-bottom: 0px;"
    >
      Test label
    </label>
  </div>
  <small
    class="form-text text-muted"
  >
    Some help text
  </small>
</div>
`;

exports[`<Checkbox/> Render uncheked checkbox 1`] = `
<div
  class="col-sm-12 offset-lg-1 col-lg-10"
  style="margin-bottom: 1rem;"
>
  <div
    class="form-group form-check"
    style="margin-bottom: 0px;"
  >
    <input
      class="form-check-input"
      id="1"
      type="checkbox"
    />
    <label
      class="form-label"
      for="1"
      style="margin-bottom: 0px;"
    >
      Test label
    </label>
  </div>
  <small
    class="form-text text-muted"
  >
    Some help text
  </small>
</div>
`;
